itlogiclab-restaurant-microservices/itlogiclab-restaurant-infrastructure/kubernetes-infrastructure/ingress/itlogiclab-ingress-definition.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: itlogiclab-ingress-controller
  labels: 
    app: itlogiclab-controller
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      name: itlogiclab-ingress 
  template: 
    metadata:
       labels:
          name: itlogiclab-ingress
    spec: 
      containers: 
        - name: ingress-container 
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
          args: 
            - /nginx-ingress-controller
            - --configmap=${POD_NAMESPACE}/nginx-configuration
          ports:
           - name: http
             containerPort: 8080
           - name: https
             containerPort: 443
