itlogiclab-restaurant-microservices/itlogiclab-restaurant-infrastructure/kubernetes-infrastructure/ingress/itlogiclab-ingress-host-based-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: itlogiclab-host-based-routing-rules
spec: 
  rules: 
    - host: itlogiclab.com
      http: 
        paths: 
          -  pathType: Prefix
             path: "/order"
             backend: 
              service: 
               name: order-service
               port: 
                number: 18081
