itlogiclab-restaurant-microservices/itlogiclab-restaurant-infrastructure/kubernetes-infrastructure/ingress/itlogiclab-ingress-path-based-rules.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
    name: itlogiclab-path-based-routing-rules
spec: 
  rules:
  - http: 
     paths: 
     - path: /order
       pathType: Prefix
       backend: 
        service: 
          name: order-service
          port: 
            number: 18081
